correct scss spacing

--- a/_src/assets/scss/components/_hero.scss
+++ b/_src/assets/scss/components/_hero.scss
@@ -35,6 +35,7 @@
 }
 
 @media all and (min-width: 768px) and (max-width: 1200px) {
+
     .hero-claim{
         background: url('../images/hero_home-tablet.jpg') center no-repeat $colorwhite;
     }
@@ -47,9 +48,10 @@
         font-size: 24px;
     }
     
-    .claim-container{
+    .claim-container {
         width: 924px;
     }
+
     .claim {
         opacity: 0.7;
         padding: 15px 30px;
@@ -60,30 +62,31 @@
     }
 }
 
-    @media all and (min-width:1200px){
-        .h2-claim {
-            font-size: 24px;
-        }
-    
-        .hero-claim {
-            background: url('../images/hero_home-desktop.jpg') center top no-repeat $colorwhite;
-            background-size: 100%;
-        }
+@media all and (min-width:1200px) {
 
-        .hero-claim-contact {
-            height: 400px;
-        }
-
-        .claim-container {
-            width: 924px;
-        }
-    
-        .claim {
-            opacity: 0.7;
-            padding: 15px 30px;
-            margin: 0px;
-            width: 50%; /*width unknown*/
-            bottom: 0px;
-            align-items: flex-start;
-        }
+    .h2-claim {
+        font-size: 24px;
     }
+
+    .hero-claim {
+        background: url('../images/hero_home-desktop.jpg') center no-repeat $colorwhite;
+        background-size: 100%;
+    }
+
+    .hero-claim-contact {
+        height: 400px;
+    }
+
+    .claim-container {
+        width: 924px;
+    }
+
+    .claim {
+        opacity: 0.7;
+        padding: 15px 30px;
+        margin: 0px;
+        width: 50%; /*width unknown*/
+        bottom: 0px;
+        align-items: flex-start;
+    }
+}
